<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#2DBBB2"
    android:orientation="vertical"
    android:padding="@dimen/ten_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_2"
            android:layout_marginTop="@dimen/five_dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/confirmation"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/etRejectionReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/code_attended"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="@dimen/ten_dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_dialog_description"
            android:layout_marginBottom="@dimen/thirty_dp"
            android:layout_marginTop="@dimen/thirty_dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thirty_five_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_login_submit"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <Button

                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thirty_five_dp"
                android:layout_marginLeft="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_roundcorner_lavender"
                android:text="@string/cancal"
                android:textColor="@color/white"

                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>

