<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/sixteen_dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.signup.ImageCropperActivity">
    <com.isseiaoki.simplecropview.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/BTN_Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/two_dp"
            android:background="@drawable/roundrect_shape"
            android:text="@string/cancal"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/BTN_Crop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/two_dp"
            android:background="@drawable/roundrect_shape"
            android:text="@string/done"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/BTN_Rotate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/two_dp"
            android:background="@drawable/roundrect_shape"
            android:text="@string/rotate"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</RelativeLayout>
