<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".view.signup.RegistrationActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar"></include>

    </android.support.design.widget.AppBarLayout>



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_registration">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:gravity="center"
                android:maxLines="2"
                android:textStyle="bold"
                android:text="@string/reg_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sixteen_sp"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_notifications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ten_dp"
                app:contentPadding="@dimen/zero_dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="@dimen/five_dp"
                card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">




                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCapturedImage"
                        android:layout_width="@dimen/one_fifty_dp"
                        android:layout_height="@dimen/one_fifty_dp"
                        app:srcCompat="@drawable/ic_add_profile" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/ten_dp"
                    android:layout_weight="2"
                    android:background="@android:color/white"
                    android:gravity="top"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/ten_dp"
                        android:layout_marginRight="@dimen/ten_dp"
                        android:orientation="vertical">

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent">
                           <EditText
                               android:id="@+id/etFirstName"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="@dimen/five_dp"
                               android:focusable="true"
                               android:focusableInTouchMode="true"
                               android:inputType="textPersonName"
                               android:layout_weight="1"
                               android:nextFocusDown="@+id/etSecondName"
                               android:hint="@string/first_name"
                               android:maxLines="1"
                               android:textSize="@dimen/sixteen_sp" />
                           <EditText
                               android:id="@+id/etSecondName"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="@dimen/five_dp"
                               android:focusable="true"
                               android:hint="@string/last_name"
                               android:focusableInTouchMode="true"
                               android:inputType="textPersonName"
                               android:layout_weight="1"
                               android:maxLines="1"
                               android:textSize="@dimen/sixteen_sp" />

                       </LinearLayout>



                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five_dp"
                            android:focusable="true"
                            android:hint="@string/email"
                            android:focusableInTouchMode="true"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textSize="@dimen/sixteen_sp" />

                        <EditText
                            android:id="@+id/etDesignation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five_dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/designation"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textSize="@dimen/sixteen_sp" />
                        <EditText
                            android:id="@+id/etStaff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five_dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/staff"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textSize="@dimen/sixteen_sp" />
                        <EditText
                            android:id="@+id/etMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five_dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/mobile"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:layout_marginBottom="@dimen/twenty_dp"
                            android:textSize="@dimen/sixteen_sp" />
                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five_dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/password"
                            android:visibility="gone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:layout_marginBottom="@dimen/twenty_dp"
                            android:textSize="@dimen/sixteen_sp" />


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:id="@+id/ll_bottom_action"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/twenty_dp"
                android:layout_weight="8"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_login_submit"
                    android:text="@string/submit"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sixteen_sp"
                    android:text="@string/already_have_an_account" />


            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
