<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom_nav_background"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_fifty_dp"
        android:layout_margin="@dimen/ten_dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/profile_photo"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/twenty_dp"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/llGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:src="@drawable/ic_attach_gallery"/>
                <TextView
                   
                    android:id="@+id/tvGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/ten_dp"
                    android:text="@string/gallery" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/llCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:src="@drawable/ic_attach_camera"/>
                <TextView
                   
                    android:id="@+id/tvCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/ten_dp"
                    android:text="@string/camera" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/llRemove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:src="@drawable/ic_delete_photo"/>
                <TextView
                   
                    android:id="@+id/tvRemove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/ten_dp"
                    android:text="@string/remove_photo" />


            </LinearLayout>







        </LinearLayout>


    </LinearLayout>


</LinearLayout>