<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_margin="@dimen/ten_dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="@dimen/thirty_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/ten_dp"
                    android:orientation="vertical">

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_2"
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_below="@+id/iv_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five_dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sixteen_sp"
                    android:text="@string/title_nw_connection_error" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_dialog_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:gravity="center"
                    android:text="@string/msg_nw_connection_error" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_dialog_description"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_dialog_ok"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ok"
                        android:textColor="@color/lavender_color" />

                    <Button

                        android:id="@+id/btn_dialog_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/five_dp"
                        android:layout_weight="1"
                        android:text="@string/settings"

                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

</LinearLayout>
